--- a/app/src/main/res/layout/item_book_cart.xml
+++ b/app/src/main/res/layout/item_book_cart.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="20dp"
@@ -7,7 +8,7 @@
 
 
         <CheckBox
-            android:id="@+id/idItemCartCheckbox"
+            android:id="@+id/idItemBookCartCheckbox"
             style="@style/CheckBoxTheme"
             android:layout_width="32dp"
             android:layout_height="24dp"
@@ -16,12 +17,12 @@
 
         <ImageView
             android:id="@+id/idItemBookCartCover"
-            android:layout_width="120dp"
-            android:layout_height="140dp"
+            android:layout_width="90dp"
+            android:layout_height="120dp"
             android:layout_alignParentTop="true"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="20dp"
-            android:layout_toEndOf="@id/idItemCartCheckbox"
+            android:layout_toEndOf="@id/idItemBookCartCheckbox"
             android:scaleType="centerInside"
             android:src="@color/blue_500" />
 
@@ -42,7 +43,7 @@
             android:textColor="@color/gray_200"/>
 
         <TextView
-            android:id="@+id/idItemBookCartPrice"
+            android:id="@+id/idItemBookCartFLPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/idItemBookCartAuthor"
@@ -51,12 +52,14 @@
             android:text="Цена руб."
             android:textColor="@color/orange_500" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/idItemBookCartBtnDelete"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_alignBottom="@id/idItemBookCartCover"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_delete" />
+            android:src="@drawable/ic_delete"
+            android:background="@color/transparent"
+            app:tint="@color/gray_200" />
 
 </RelativeLayout>
