--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,24 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="bottom_navbar_offset">52dp</dimen>
+    <dimen name="bottom_navbar_offset">64dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="input_field_padding_vertical">14dp</dimen>
+    <dimen name="input_field_padding_horizontal">20dp</dimen>
+    <dimen name="input_field_text_size">14sp</dimen>
+
+    <dimen name="button_corner_radius">32dp</dimen>
+    <dimen name="button_text_size">14sp</dimen>
+    <dimen name="button_padding_vertical">12dp</dimen>
+
+    <dimen name="label_title_text_size">32sp</dimen>
+
+    <dimen name="log_page_margin">48dp</dimen>
+
+    <dimen name="genre_width">120dp</dimen>
+    <dimen name="genre_height">140dp</dimen>
+    <dimen name="genre_divider_img_name">8dp</dimen>
+    <dimen name="genre_text_size">16sp</dimen>
+
 </resources>
