--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -5,10 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".ui.book.BookFragment"
     android:background="@color/white"
     android:scrollbars="none">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/idFrBookCLMain"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -66,12 +69,12 @@
                 android:text="12.12 rub"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="8pt"
-                android:visibility="gone"
-                app:cornerRadius="24dp" />
+                android:textSize="16sp"
+                app:cornerRadius="8dp" />
 
             <TextView
                 android:id="@+id/idFrBookTVBought"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -93,7 +96,7 @@
             android:background="@drawable/bg_white_border_blue_200_rounded"
             android:padding="20dp"
             android:text="Description"
-            android:textSize="6pt"
+            android:textSize="12sp"
             android:textColor="@color/black"/>
 
 
