--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -48,6 +48,16 @@
         android:label="@string/title_order"
         tools:layout="@layout/fragment_order"
         />
+    <fragment
+        android:id="@+id/navigation_book"
+        android:name="com.zlatamigas.readme.ui.book.BookFragment"
+        android:label=""
+        tools:layout="@layout/fragment_book">
+        <argument
+            android:name="book_id"
+            app:argType="long"
+            android:defaultValue="-1L"/>
+    </fragment>
 
 
 
