--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation"
+        android:layout_marginBottom="@dimen/bottom_navbar_height"
     />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
