--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -1,106 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.book.BookFragment"
-    android:background="@color/white"
-    android:scrollbars="none">
+    android:background="@color/white">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/idFrBookCLMain"
-        android:visibility="gone"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="32dp"
-        android:paddingBottom="@dimen/bottom_navbar_offset">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/idFrBookFLCartStatus"
+        android:scrollbars="none">
 
-        <ImageView
-            android:id="@+id/idFrBookIVCover"
-            android:layout_width="240dp"
-            android:layout_height="280dp"
-            android:src="@color/green_200"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/idFrBookTVTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="Title"
-            android:textSize="12pt"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/idFrBookIVCover" />
-
-        <TextView
-            android:id="@+id/idFrBookTVAuthor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Authors"
-            android:textSize="8pt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/idFrBookTVTitle" />
-
-        <FrameLayout
-            android:id="@+id/idFrBookFLBuyStatus"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/idFrBookCLMain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/idFrBookTVAuthor">
+            android:orientation="vertical"
+            android:padding="32dp"
+            android:visibility="gone">
 
-            <Button
-                android:id="@+id/idFrBookTVPrice"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/orange_500"
-                android:enabled="false"
-                android:padding="12dp"
-                android:text="12.12 rub"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                app:cornerRadius="8dp" />
+            <ImageView
+                android:id="@+id/idFrBookIVCover"
+                android:layout_width="240dp"
+                android:layout_height="280dp"
+                android:src="@color/green_200"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/idFrBookTVBought"
-                android:visibility="gone"
+                android:id="@+id/idFrBookTVTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:drawableStart="@drawable/ic_check"
-                android:text="Вы уже приобрели эту книгу"
-                android:textAlignment="center"
-                android:textColor="@color/green_200" />
+                android:layout_marginTop="32dp"
+                android:text="Title"
+                android:textColor="@color/black"
+                android:textSize="12pt"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idFrBookIVCover" />
 
-        </FrameLayout>
+            <TextView
+                android:id="@+id/idFrBookTVAuthor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Authors"
+                android:textSize="8pt"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idFrBookTVTitle" />
 
-        <TextView
-            android:id="@+id/idFrBookTVDescription"
+            <FrameLayout
+                android:id="@+id/idFrBookFLBuyStatus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idFrBookTVAuthor">
+
+                <Button
+                    android:id="@+id/idFrBookTVPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/orange_500"
+                    android:enabled="false"
+                    android:padding="12dp"
+                    android:text="12.12 rub"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    app:cornerRadius="8dp" />
+
+                <TextView
+                    android:id="@+id/idFrBookTVBought"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:drawableStart="@drawable/ic_check"
+                    android:text="Вы уже приобрели эту книгу"
+                    android:textAlignment="center"
+                    android:textColor="@color/green_200"
+                    android:visibility="gone" />
+
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/idFrBookTVDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/bg_white_border_blue_200_rounded"
+                android:padding="20dp"
+                android:text="Description"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idFrBookFLBuyStatus" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+
+
+    <FrameLayout
+        android:id="@+id/idFrBookFLCartStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true">
+
+        <Button
+            android:id="@+id/idFrBookBtnAddToCart"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/idFrBookFLBuyStatus"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/bg_white_border_blue_200_rounded"
-            android:padding="20dp"
-            android:text="Description"
-            android:textSize="12sp"
-            android:textColor="@color/black"/>
+            android:drawableLeft="@drawable/ic_bnm_cart"
+            android:text="Добавить в корзину"
+            android:textAllCaps="false"
+            android:layout_margin="0dp"
+            app:cornerRadius="0dp"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"/>
+    </FrameLayout>
 
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.core.widget.NestedScrollView>
+</RelativeLayout>
