--- a/app/src/main/res/layout/fragment_searchresult.xml
+++ b/app/src/main/res/layout/fragment_searchresult.xml
@@ -12,8 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/bottom_navbar_offset">
+        android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/idFrSearchResultRVBooks"
