--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="bottom_navbar_offset">64dp</dimen>
+    <dimen name="bottom_navbar_height">56dp</dimen>
+    <dimen name="bottom_navbar_additional_offset">12dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="input_field_padding_vertical">14dp</dimen>
