--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,12 +2,11 @@
 <resources>
 
     <string-array name="sorting_type">
-        <item>A - Z</item>
-        <item>Z - A</item>
+        <item>А - Я</item>
+        <item>Я - А</item>
     </string-array>
 
     <string-array name="payment_type">
-        <item>Card</item>
-        <item>Check</item>
+        <item>Карта</item>
     </string-array>
 </resources>
