--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,6 +28,7 @@
         android:background="@drawable/bg_white_border_blue_500_rounded"
         android:hint="Адрес электронной почты"
         android:singleLine="true"
+        android:inputType="textPassword"
         android:textSize="@dimen/input_field_text_size"
         android:paddingVertical="@dimen/input_field_padding_vertical"
         android:paddingHorizontal="@dimen/input_field_padding_horizontal"
@@ -41,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="20dp"
         android:background="@drawable/bg_white_border_blue_500_rounded"
+
         android:hint="Пароль"
         android:singleLine="true"
         android:textSize="@dimen/input_field_text_size"
@@ -57,6 +59,7 @@
         android:background="@drawable/bg_white_border_blue_500_rounded"
         android:hint="Повторите пароль"
         android:singleLine="true"
+        android:inputType="textPassword"
         android:textSize="@dimen/input_field_text_size"
         android:paddingVertical="@dimen/input_field_padding_vertical"
         android:paddingHorizontal="@dimen/input_field_padding_horizontal"
