--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,6 +41,7 @@
                     android:gravity="center_horizontal">
 
                     <LinearLayout
+                        android:id="@+id/idLLGenreFiction"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -48,18 +49,19 @@
                         <ImageView
                             android:layout_width="@dimen/genre_width"
                             android:layout_height="@dimen/genre_height"
-                            android:src="@color/blue_700"
+                            android:src="@drawable/g_fiction"
                             android:layout_marginBottom="@dimen/genre_divider_img_name"/>
                         <TextView
                             android:layout_width="@dimen/genre_width"
                             android:layout_height="wrap_content"
-                            android:text="Худодественная литература"
+                            android:text="Художественная литература"
                             android:textColor="@color/black"
                             android:textAlignment="center"
                             android:textSize="@dimen/genre_text_size"/>
 
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/idLLGenreNonFiction"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -67,7 +69,7 @@
                         <ImageView
                             android:layout_width="@dimen/genre_width"
                             android:layout_height="@dimen/genre_height"
-                            android:src="@color/blue_700"
+                            android:src="@drawable/g_nonfiction"
                             android:layout_marginBottom="@dimen/genre_divider_img_name"/>
                         <TextView
                             android:layout_width="@dimen/genre_width"
@@ -79,6 +81,7 @@
 
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/idLLGenreScienceFiction"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -86,12 +89,12 @@
                         <ImageView
                             android:layout_width="@dimen/genre_width"
                             android:layout_height="@dimen/genre_height"
-                            android:src="@color/blue_700"
+                            android:src="@drawable/g_science_fiction"
                             android:layout_marginBottom="@dimen/genre_divider_img_name"/>
                         <TextView
                             android:layout_width="@dimen/genre_width"
                             android:layout_height="wrap_content"
-                            android:text="Фентези и фантастика"
+                            android:text="Фантастика"
                             android:textColor="@color/black"
                             android:textAlignment="center"
                             android:textSize="@dimen/genre_text_size"/>
