--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -58,8 +58,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/button_blue500_selector"
         android:paddingVertical="@dimen/button_padding_vertical"
         android:text="Войти"
+        android:textColor="@color/white"
         android:textAllCaps="false"
         android:textSize="@dimen/button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
@@ -107,9 +109,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="20dp"
-        android:backgroundTint="@color/blue_200"
+        android:backgroundTint="@color/button_blue200_selector"
         android:paddingVertical="@dimen/button_padding_vertical"
         android:text="Зарегистрироваться"
+        android:textColor="@color/white"
         android:textAllCaps="false"
         android:textSize="@dimen/button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
