--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -62,6 +62,7 @@
             </LinearLayout>
 
             <Spinner
+                android:id="@+id/idFrCartSPPaymentType"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:entries="@array/payment_type"
