--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="green_200">#03ED7D</color>
     <color name="green_700">#069135</color>
     <color name="red_200">#FF5C52</color>
+    <color name="red_500">#9B160E</color>
     <color name="orange_500">#FFAE52</color>
     <color name="gray_200">#6F6F6F</color>
 
