--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,6 @@
         android:background="@drawable/bg_white_border_blue_500_rounded"
         android:hint="Адрес электронной почты"
         android:singleLine="true"
-        android:inputType="textPassword"
         android:textSize="@dimen/input_field_text_size"
         android:paddingVertical="@dimen/input_field_padding_vertical"
         android:paddingHorizontal="@dimen/input_field_padding_horizontal"
@@ -46,6 +45,7 @@
         android:hint="Пароль"
         android:singleLine="true"
         android:textSize="@dimen/input_field_text_size"
+        android:inputType="textPassword"
         android:paddingVertical="@dimen/input_field_padding_vertical"
         android:paddingHorizontal="@dimen/input_field_padding_horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,8 +73,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/blue_200"
+        android:backgroundTint="@color/button_blue200_selector"
         android:text="Зарегистрироваться"
+        android:textColor="@color/white"
         android:textSize="@dimen/button_text_size"
         android:paddingVertical="@dimen/button_padding_vertical"
         android:textAllCaps="false"
@@ -120,8 +121,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="20dp"
+        android:backgroundTint="@color/button_blue500_selector"
         android:paddingVertical="@dimen/button_padding_vertical"
         android:text="Войти"
+        android:textColor="@color/white"
         android:textAllCaps="false"
         android:textSize="@dimen/button_text_size"
         app:cornerRadius="@dimen/button_corner_radius"
