--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -116,22 +116,22 @@
         android:id="@+id/idFrBookFLCartStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true">
 
         <Button
             android:id="@+id/idFrBookBtnAddToCart"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="0dp"
             android:drawableLeft="@drawable/ic_bnm_cart"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
             android:text="Добавить в корзину"
             android:textAllCaps="false"
-            android:layout_margin="0dp"
-            app:cornerRadius="0dp"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"/>
+            android:visibility="gone"
+            app:cornerRadius="0dp" />
     </FrameLayout>
 
 </RelativeLayout>
